# futils

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  release.sh  rustfmt.toml  tarpaulin.toml  update_version.sh
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  codecov.yml  create_release.yml  release.yml
src/: cli.rs  comment.rs  format_json.rs  format_sql.rs  main.rs
wix/: main.wxs
