[package]
authors     = ["Luke Eltiste"]
description = "A collection of command line tool that I use to make my life easier"
edition     = "2021"
license     = "MIT"
name        = "frazzers-utils"
readme      = "README.md"
repository  = "https://github.com/Frazzer951/futils"
version     = "0.1.1"

[[bin]]
name = "futils"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto      = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
