[package]
authors     = ["Luke Eltiste"]
description = "A collection of command line tool that I use to make my life easier"
edition     = "2021"
license     = "MIT"
name        = "frazzers-utils"
readme      = "README.md"
repository  = "https://github.com/Frazzer951/futils"
version     = "0.1.2"

[[bin]]
name = "futils"
path = "src/main.rs"

[dependencies]
anyhow        = "1.0"
clap          = { version = "4.4", features = ["cargo"] }
clap_complete = "4.4"
fs-err        = "2.9"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"

[dev-dependencies]
tempfile = "3.8"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto      = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# Config for 'cargo release'
[workspace.metadata.release]
pre-release-commit-message = "chore(release): prepare for release {{version}}"
pre-release-hook           = ["./update_version.sh", "{{version}}"]
