[package]
authors     = ["Luke Eltiste"]
description = "A collection of command line tool that I use to make my life easier"
edition     = "2021"
license     = "MIT"
name        = "frazzers-utils"
readme      = "README.md"
repository  = "https://github.com/Frazzer951/futils"
version     = "0.3.2"

[package.metadata.wix]
upgrade-guid = "808C8A18-6A7E-4D28-88F4-5423B5B89A3C"
path-guid    = "1F39F219-9EE9-47EE-BEE5-E50079651B34"
license      = false
eula         = false

[[bin]]
name = "futils"
path = "src/main.rs"

[dependencies]
anyhow        = "1.0"
clap          = { version = "4.4", features = ["cargo"] }
clap_complete = "4.4"
fs-err        = "2.9"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = { version = "1.0", features = ["preserve_order"] }
sqlparse      = "0.3"

[dev-dependencies]
tempfile = "3.8"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto      = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.7.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# A GitHub repo to push Homebrew formulas to
tap = "Frazzer951/homebrew-futils"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]

# Config for 'cargo release'
[workspace.metadata.release]
pre-release-commit-message = "chore(release): prepare for release {{version}}"
pre-release-hook           = ["./release.sh", "{{version}}"]
